# wisp

./: .editorconfig  .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE  README.md  deny.toml  rust-toolchain.toml
client/: Cargo.toml  README.md
client/src/: app.rs  main.rs  net.rs  state.rs
core/: Cargo.toml  README.md
core/src/: audit.rs  channel.rs  codec.rs  color.rs  crypto.rs  framing.rs  identity.rs  known_hosts.rs  lib.rs  media.rs  session.rs  transport.rs  trust.rs  wire.rs
docs/: ARCHITECTURE.md  PLAN-SUMMARY.md  PLATFORM-MATRIX.md  PROJECT-PLAN.md  README.md  ROADMAP.md  RUNNING-THE-SPIKE.md  SECURITY.md  TECH-STACK.md
docs/adr/: 0000-template.md  0001-monorepo-rust-core-deferred-slots.md  0002-transport-quic-mvp-webrtc-phase3.md  0003-noise-pattern.md  0004-codec-strategy.md  0005-host-outbound-only-relay-blind.md  0006-pairing-device-keys-sas.md  0007-relay-engine-coturn-vs-eturnal.md  0008-secure-desktop-helper-ipc-boundary.md  0009-device-key-storage-spike.md  0010-interactive-session-only-no-driver.md  0011-phase-0b-media-pipeline-slices.md  README.md
docs/security/: README.md  crypto-spec.md  disclosure-sla.md  key-compromise-runbook.md  pgp-key.asc  security.txt  threat-model.md
docs/security/pen-tests/: README.md
host/: README.md
host/host-core/: Cargo.toml
host/host-core/src/: lib.rs
host/host-windows/: Cargo.toml
host/host-windows/src/: capture.rs  capture_wgc.rs  connection.rs  gpu_color.rs  h264.rs  inject.rs  main.rs
infra/: README.md
media/media-windows/: Cargo.toml
media/media-windows/src/: h264.rs  lib.rs
spikes/: README.md
tests/: README.md
tools/: README.md
