[package]
name = "client"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
srd-core = { path = "../core" }
winit.workspace = true
softbuffer.workspace = true   # Phase-0a CPU present; swapped for wgpu in 0b
tokio.workspace = true
quinn.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
