[package]
name = "client"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
wisp-core = { path = "../core" }
winit.workspace = true
softbuffer.workspace = true   # Phase-0a CPU present; swapped for wgpu in 0b
tokio.workspace = true
quinn.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true

# Windows-only H.264 decode (Media Foundation, ADR-0011 4c). The client is Windows for the
# MVP; HwH264 frames are decoded here, other codecs by the portable wisp_core::codec.
[target.'cfg(windows)'.dependencies]
wisp-media-win = { path = "../media/media-windows" }
