[package]
name = "host-windows"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
srd-core = { path = "../../core" }
tokio.workspace = true
quinn.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true

# Phase-0a uses the GDI capture path + Win32 SendInput (no D3D11/WGC/MediaFoundation yet).
# Phase-0b re-adds Graphics_Capture + Direct3D11 + Dxgi + Media_MediaFoundation for the
# WGC -> hardware-H.264 path. ADR-0010: interactive-session only; no driver in Phase 0.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_HiDpi",
] }
