[package]
name = "host-windows"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
wisp-core = { path = "../../core" }
wisp-media-win = { path = "../../media/media-windows" }
tokio.workspace = true
quinn.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true

# Phase-0a uses the GDI capture path + Win32 SendInput. Phase-0b 4b adds Graphics_Capture +
# Direct3D11 + Dxgi for the WGC -> D3D11-texture path (hardware H.264 in 4c adds
# Media_MediaFoundation). ADR-0010: interactive-session only; no driver in Phase 0.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_HiDpi",
    # WGC capture (ADR-0011 4b)
    "Foundation",
    "Graphics",
    "Graphics_Capture",
    "Graphics_DirectX",
    "Graphics_DirectX_Direct3D11",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_System_Com",
    "Win32_System_WinRT",
    "Win32_System_WinRT_Direct3D11",
    "Win32_System_WinRT_Graphics_Capture",
] }
